--- a/market-report.html
+++ b/market-report.html
@@ -16,6 +16,16 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
     
+    <!--Links-->
+    <a href="index.html">About</a>
+    <a href="new-properties.html">New Properties</a>
+    <a href="real-estate-listings.html">Listings</a>
+    <a href="market-report.html">Market Report</a>
+    <a href="contact.html">Contact</a>
+    <a href="http://hud.gov" target='_blank'>H.U.D.</a>
+    <br>
+    
+    <h3>Market Report</h3>
     <table>
       <tr>
         <th>Address</th>
